--- a/index.html
+++ b/index.html
@@ -628,10 +628,10 @@ function resetAll(){
   document.getElementById('bank_name').value='HDFC Bank';
   document.getElementById('bank_acc').value='50200085544700';
   document.getElementById('bank_ifsc').value='HDFC0003343';
-  document.getElementById('bank_branch').value='Andheri West';
+  document.getElementById('bank_branch').value='Anandapur';
   document.getElementById('upi_id').value='8144868707@ybl';
   document.getElementById('notes').value='UPI / Cash / Bank Transfer / Cheque';
-  document.getElementById('terms').value='Goods once sold will not be taken back.\nPayment due within 7 days of invoice.\nE. & O.E.';
+  document.getElementById('terms').value='Goods once sold will not be taken back. \n We declare that invoice shows the actual price of the goods described and that all particulars aretrue and correct';
   generate();
 }
 
@@ -645,10 +645,10 @@ document.getElementById('s_addr').value = 'Anandapur Bridge Chhaka, Anandapur, K
 document.getElementById('bank_name').value = 'HDFC Bank';
 document.getElementById('bank_acc').value = '50200085544700';
 document.getElementById('bank_ifsc').value = 'HDFC0003343';
-document.getElementById('bank_branch').value = 'Andheri West';
+document.getElementById('bank_branch').value = 'Anandapur';
 document.getElementById('upi_id').value = '8144868707@ybl';
 document.getElementById('notes').value = 'UPI / Cash / Bank Transfer / Cheque';
-document.getElementById('terms').value = 'Goods once sold will not be taken back.\nPayment due within 7 days of invoice.\nE. & O.E.';
+document.getElementById('terms').value = 'Goods once sold will not be taken back. \n We declare that invoice shows the actual price of the goods described and that all particulars aretrue and correct';
 generate();
 </script>
 </body>
