--- a/index.html
+++ b/index.html
@@ -637,7 +637,7 @@ function resetAll(){
 
 // ─── INIT ───
 document.getElementById('inv_date').value = today();
-document.getElementById('s_name').value = 'LED House';
+document.getElementById('s_name').value = 'LED HOUSE';
 document.getElementById('s_gstin').value = '21EVTPR8050M1ZT';
 document.getElementById('s_phone').value = '+91 9124081685';
 document.getElementById('s_email').value = 'ledhouseanandapur@gmail.com';
